# numoop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml  requirements.txt  result_euler_scalar.csv  result_euler_vector.csv  result_midpoint_vector.csv  result_rk4_scalar.csv  temptest.py  venv.env
bindings/: dataframe.cpp
docs/: README.md  conf.py  index.rst
docs/sources/: modules.rst  numoop.ode.rst  numoop.rst  numoop.stats.rst
examples/: example_program.cpp  ode_example.py  ode_test.cpp  stats_example.py
include/ode/: runge_kutta.hpp
src/: library.h  numoop.hpp
src/bindings/: CMakeLists.txt  _numoop.cpp  dataframe.cpp  load_bindings.cpp  load_bindings.hpp
src/bindings/dataframe_bindings/: CMakeLists.txt  dataframe_bindings.cpp  dataframe_bindings.hpp  df_append_column.cpp  df_append_row.cpp  df_call.cpp  df_column_labels.cpp  df_get_map.cpp  df_getitem.cpp  df_helpers.cpp  df_helpers.hpp  df_init.cpp  df_insert_column.cpp  df_insert_row.cpp  df_pickle.cpp  df_repr.cpp  df_set_map.cpp  df_setitem.cpp  df_shape.cpp  df_summarize.cpp  df_supported_types.hpp  df_view.cpp
src/bindings/ode/: CMakeLists.txt  ode_bindings.cpp  ode_bindings.hpp  ode_types.hpp  scal_bindings.hpp  wrapper_base.hpp  wrapper_scal.hpp  wrapper_vec.hpp
src/bindings/ode_bindings/: CMakeLists.txt  euler_scal_bindings.cpp  example.py  method_scal.cpp  method_scal.hpp  method_scal_bindings.cpp  method_scal_bindings.hpp  method_vec_bindings.cpp  ode_bindings.cpp  ode_types.hpp  scal_bindings.hpp  vector_bindings.hpp
src/bindings/stats/: CMakeLists.txt  load_bindings.cpp  load_bindings.hpp
src/bindings/stats/dataframe_bindings/: dataframe_bindings.cpp  dataframe_bindings.hpp  df_append_column.cpp  df_append_row.cpp  df_call.cpp  df_column_labels.cpp  df_get_map.cpp  df_getitem.cpp  df_helpers.cpp  df_helpers.hpp  df_init.cpp  df_insert_column.cpp  df_insert_row.cpp  df_pickle.cpp  df_repr.cpp  df_set_map.cpp  df_setitem.cpp  df_shape.cpp  df_summarize.cpp  df_view.cpp
src/bindings/stats_bindings/: stats_bindings.cpp  stats_bindings.hpp
src/bindings/stats_bindings/dataframe_bindings/: CMakeLists.txt  df_helpers.cpp  df_init.cpp  df_insert_column.cpp  df_insert_row.cpp  df_set_map.cpp  df_view.cpp
src/numoop/: __init__.py  __init__.pyi  _numoop.pyi  dataframe.py  types.py  utils.py
src/numoop/ode/: __init__.py  solvers.py
src/numoop/stats/: __init__.py  dataframe.py  load.py  load_fn.py
src/ode/: euler.hpp  euler_scal.hpp  euler_vec.hpp  method.hpp  method_scal.hpp  method_vec.hpp  midpoint.hpp  midpoint_scal.hpp  midpoint_vec.hpp  ode.hpp  ode_module.hpp  ode_scal.hpp  ode_vec.hpp  rk4.hpp  rk4_scal.hpp  rk4_vec.hpp  runge_kutta.hpp
src/stats/: _load.hpp  dataframe.hpp  dataframe_helpers.hpp  load.hpp  main.cpp  misc.hpp  ode_module.hpp  parse.hpp  stats.hpp
tests/: CMakeLists.txt  dataset.csv  ode_oop_test.cpp  ode_test.cpp  stats_test.cpp  test_dataframe.py  test_ode.cpp  test_ode.py  test_stats.cpp  test_stats.py
tests/csvtests/: euler_vector.csv  midpoint_scalar.csv  midpoint_vector.csv  rk4_vector.csv
