[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "numoop"
authors = [
    {name = "Uros Zivanovic", email = "chromeilion@outlook.com"},
    {name = "Christian Špringer", email = "christian.springer228@gmail.com" }
]
description = "Fast statistics and ODE solver library."
readme = "README.md"
requires-python = ">=3.10"
version = "2.0.0"
dependencies = [
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
test = ["pytest-cpp", "mypy"]
examples = ["scipy"]
docs = ["Sphinx", "sphinx_rtd_theme"]

[project.urls]
Repository = "https://github.com/Chromeilion/numoop"

[tool.pytest.ini_options]
testpaths = ["build/tests", "tests"]

[tool.mypy]
strict = true
exclude = "(extern|venv|build|examples)"
plugins = "numpy.typing.mypy_plugin"
python_version = "3.10"
